--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,27 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.4'
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    implementation('io.reactivex.rxjava2:rxjava:2.1.1')
+    implementation('io.reactivex.rxjava2:rxandroid:2.0.1')
+    implementation('com.trello.rxlifecycle2:rxlifecycle:2.2.1')
+    implementation('com.trello.rxlifecycle2:rxlifecycle-components:2.2.1')
+    implementation 'org.jsoup:jsoup:1.11.3'
+    implementation('com.crashlytics.sdk.android:crashlytics:2.9.4@aar') {
+        transitive = true
+    }
+
+    // OkHttp, Retrofit
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation ('com.squareup.retrofit2:converter-simplexml:2.5.0') {
+        exclude group: 'xpp3', module: 'xpp3'
+        exclude group: 'stax', module: 'stax-api'
+        exclude group: 'stax', module: 'stax'
+    }
 }
